--- a/index.html
+++ b/index.html
@@ -275,13 +275,13 @@
     </tr>
     <tr class="table-secondary">
       <th scope="row">3</th>
-      <td >عدي الشيخ عرابي</td>
+      <td >عدي شيخ عرابي</td>
       <td>oday_291652</td>
       <td>About us page, contact us page</td>
     </tr>
     <tr>
       <th scope="row">4</th>
-      <td >محمد صالح</td>
+      <td>محمد صالح كردي</td>
       <td>mohamad_salh_298020</td>
       <td>About us page, contact us page</td>
     </tr>
