--- a/about_us.html
+++ b/about_us.html
@@ -174,7 +174,7 @@
     </tr>
     <tr>
       <th scope="row">4</th>
-      <td>محمد صالح كردي</td>
+      <td>محمد صالح الكردي</td>
       <td>mohamad_salh_298020</td>
       <td>About us page, contact us page</td>
     </tr>
